--- a/CPCApp/app/build.gradle
+++ b/CPCApp/app/build.gradle
@@ -32,7 +32,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.google.android.gms:play-services-vision:17.0.2'
+
+//<<<<<<< HEAD
+    implementation 'com.google.android.gms:play-services-vision:15.0.0'
+//=======
+//>>>>>>> 40837fe80fdad3c39c8e0c2a8938d08c38d6884d
 
 }
 apply plugin: 'com.google.gms.google-services'
