--- a/CPCApp/app/src/main/AndroidManifest.xml
+++ b/CPCApp/app/src/main/AndroidManifest.xml
@@ -2,16 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.stanleypena.cpcapp">
 
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="true" />
+<!--<<<<<<< HEAD-->
+    <!--<uses-feature-->
+        <!--android:name="android.hardware.camera"-->
+        <!--android:required="true" />-->
 
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-feature android:name="android.hardware.camera.autofocus" />
+    <!--<uses-permission android:name="android.permission.CAMERA" />-->
+    <!--<uses-feature android:name="android.hardware.camera.autofocus" />-->
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <!--<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
+    <!--<uses-permission android:name="android.permission.INTERNET" />-->
+    <!--<uses-permission android:name="android.permission.VIBRATE"/>-->
+<!--=======-->
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
@@ -34,13 +36,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".QRScanner"></activity>
+<!--<<<<<<< HEAD-->
+        <!--<activity android:name=".QRScanner"></activity>-->
 
-        <meta-data
-            android:name="com.google.android.gms.vision.DEPENDENCIES"
-            android:value="barcode" />
+        <!--<meta-data-->
+            <!--android:name="com.google.android.gms.vision.DEPENDENCIES"-->
+            <!--android:value="barcode" />-->
 
 
+<!--=======-->
         <activity
             android:name=".RegisterActivity"
             android:label="@string/title_activity_register"
