--- a/CPCApp/app/src/main/AndroidManifest.xml
+++ b/CPCApp/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.stanleypena.cpcapp">
 
-<!--<<<<<<< HEAD-->
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <!--<<<<<<< HEAD-->
     <!--<uses-feature-->
         <!--android:name="android.hardware.camera"-->
         <!--android:required="true" />-->
