--- a/CPCApp/app/src/main/AndroidManifest.xml
+++ b/CPCApp/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -32,6 +34,9 @@
             android:label="@string/title_activity_register"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".QRScanner"></activity>
+
+        <meta-data android:name="com.google.android.gma.vision.DEPENDENCIES"
+            android:value="barcode"></meta-data>
     </application>
 
 </manifest>
